# mark_whisper

./: .gitignore  .python-path.example  AGENTS.md  README.md  START-whisper.bat  START-whisper.vbs  install.cmd  install.ps1  pyproject.toml  requirements.txt  run-whisper.cmd  run-whisper.ps1
docs/: CURSOR-global-setup.md
scripts/: find_python.ps1
tools/: bootstrap_install.py
whisper/: __init__.py  __main__.py  app.py  audio.py  config.py  diagnostics.py  diagnostics_ui.py  hotkeys.py  injector.py  learning.py  settings_ui.py
whisper/adapters/: __init__.py  anthropic_llm.py  base.py  openai_llm.py  openai_stt.py
whisper/modes/: __init__.py  dictate.py  edit_selection.py  smart_voice.py
whisper/personas/: __init__.py  schema.py  store.py
