[project]
name = "whisper-assistant"
version = "0.1.0"
description = "Global voice dictate and edit for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "keyboard>=0.13.5",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.1",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
whisper-assistant = "whisper.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper*"]
